--- a/views/Homepage.pug
+++ b/views/Homepage.pug
@@ -1,7 +1,11 @@
 doctype html
 html
-  head
-    title= 'Homepage | Integrating With HubSpot I Practicum'
+ doctype html
+ html 
+     head 
+         title= `${title}`
+         meta(name="viewport" content="width=device-width, initial-scale=1")
+         link(rel="stylesheet", href="/css/style.css")
   body
     p
       a(href='/update-cobj') Add/Update this table
