--- a/views/updates.pug
+++ b/views/updates.pug
@@ -1,7 +1,11 @@
 doctype html
 html
-  head
-    title= pageTitle
+doctype html
+html 
+    head 
+        title= `${title}`
+        meta(name="viewport" content="width=device-width, initial-scale=1")
+        link(rel="stylesheet", href="/css/style.css")
   body
     // Link to the homepage
     p
