--- a/views/Homepage.pug
+++ b/views/Homepage.pug
@@ -1,27 +1,22 @@
 doctype html
 html
- doctype html
- html 
-     head 
-         title= `${title}`
-         meta(name="viewport" content="width=device-width, initial-scale=1")
-         link(rel="stylesheet", href="/css/style.css")
+  head
+    title Liste des Pets
   body
-    p
-      a(href='/update-cobj') Add/Update this table
-
-
+    h1 Liste des Pets
     table
       thead
         tr
           th Name
           th Type
-          th Age 
-
+          th Age
       tbody
         each obj in customObjects
           tr
             td= obj.Name
             td= obj.Type
             td= obj.Age
+    p
+      a(href='/update-cobj') Ajouter/Modifier ce tableau
+
 
