--- a/views/Homepage.pug
+++ b/views/Homepage.pug
@@ -13,7 +13,7 @@ html
       tbody
         each obj in customObjects
           tr
-            td= obj.Name
+            td= obj.id
             td= obj.Type
             td= obj.Age
     p
