all proprieties commits

--- a/views/Homepage.pug
+++ b/views/Homepage.pug
@@ -13,9 +13,9 @@ html
       tbody
         each obj in customObjects
           tr
-            td= obj.id
-            td= obj.Type
-            td= obj.Age
+            td= obj.name
+            td= obj.type
+            td= obj.age
     p
       a(href='/update-cobj') Ajouter/Modifier ce tableau
 
