--- a/views/index.pug
+++ b/views/index.pug
@@ -13,8 +13,8 @@ html
       tbody
         each obj in customObjectData.results
           tr
-            td= obj.properties.Name.value
-            td= obj.properties.Type.value
-            td= obj.properties.Age.value
+            td= obj.properties.name.value
+            td= obj.properties.type.value
+            td= obj.properties.age.value
     p
       a(href='/update-cobj') Ajouter/Modifier ce tableau
